Fixes thumbnail scrolling jumps

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -955,8 +955,12 @@ html[dir='rtl'] .toolbarButton.pageDown::before {
   width: 120px;
   top: 0;
   bottom: 0;
-  padding: 10px 40px 0;
+  padding: 10px 40px 10px;
   overflow: auto;
+}
+
+#thumbnailView a:not(:last-child) [id^='thumbnailContainer'] {
+  margin-bottom: 4px;
 }
 
 .thumbnail {
